Bug 49596 - [4.7 Regression] FAIL: gcc.dg/torture/pr43879_1.c
Summary: [4.7 Regression] FAIL: gcc.dg/torture/pr43879_1.c
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.0
Assignee: Richard Biener
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-30 17:44 UTC by H.J. Lu
Modified: 2011-07-04 09:37 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2011-07-01 07:07:56


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2011-06-30 17:44:19 UTC
On Linux/x86, revision 175707

http://gcc.gnu.org/ml/gcc-cvs/2011-06/msg01199.html

caused:

FAIL: gcc.dg/torture/pr43879_1.c  -O1  execution test
FAIL: gcc.dg/torture/pr43879_1.c  -O2  execution test
FAIL: gcc.dg/torture/pr43879_1.c  -O3 -fomit-frame-pointer  execution test
FAIL: gcc.dg/torture/pr43879_1.c  -O3 -g  execution test
FAIL: gcc.dg/torture/pr43879_1.c  -Os  execution test
Comment 1 Richard Biener 2011-07-01 07:07:56 UTC
Mine.
Comment 2 Richard Biener 2011-07-01 11:13:17 UTC
Author: rguenth
Date: Fri Jul  1 11:13:13 2011
New Revision: 175753

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=175753
Log:
2011-07-01  Richard Guenther  <rguenther@suse.de>

	PR middle-end/49596
	* cgraph.h (varpool_all_refs_explicit_p): Not analyzed nodes
	may have unknown refs.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/cgraph.h
Comment 3 Richard Biener 2011-07-04 09:37:46 UTC
Fixed.