2011-07-01  Richard Guenther  <rguenther@suse.de>

PR middle-end/49596
	* cgraph.h (varpool_all_refs_explicit_p): Not analyzed nodes
	may have unknown refs.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@175753 138bc75d-0d04-0410-961f-82ee72b054a4